// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup [common] example testing should match snapshot(s) for default-props 1`] = `
<span
  className="lucid-RadioGroup"
>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Superman",
      }
    }
    callbackId={0}
    isDisabled={false}
    isSelected={true}
    key="0"
    name="1-lucid-RadioGroup-1"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <Label>
      Superman
    </Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Batman",
      }
    }
    callbackId={1}
    isDisabled={false}
    isSelected={false}
    key="1"
    name="1-lucid-RadioGroup-1"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <Label>
      Batman
    </Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Wonder Woman",
      }
    }
    callbackId={2}
    isDisabled={false}
    isSelected={false}
    key="2"
    name="1-lucid-RadioGroup-1"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <Label>
      Wonder Woman
    </Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Aquaman",
      }
    }
    callbackId={3}
    isDisabled={false}
    isSelected={false}
    key="3"
    name="1-lucid-RadioGroup-1"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <Label>
      Aquaman
    </Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Robin",
      }
    }
    callbackId={4}
    isDisabled={false}
    isSelected={false}
    key="4"
    name="1-lucid-RadioGroup-1"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <Label>
      Robin
    </Label>
  </RadioButtonLabeled>
</span>
`;

exports[`RadioGroup [common] example testing should match snapshot(s) for is-disabled 1`] = `
<span
  className="lucid-RadioGroup"
>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Superman",
      }
    }
    callbackId={0}
    isDisabled={true}
    isSelected={true}
    key="0"
    name="1-lucid-RadioGroup-1"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <Label>
      Superman
    </Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Batman",
      }
    }
    callbackId={1}
    isDisabled={true}
    isSelected={false}
    key="1"
    name="1-lucid-RadioGroup-1"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <Label>
      Batman
    </Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Wonder Woman",
      }
    }
    callbackId={2}
    isDisabled={true}
    isSelected={false}
    key="2"
    name="1-lucid-RadioGroup-1"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <Label>
      Wonder Woman
    </Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Aquaman",
      }
    }
    callbackId={3}
    isDisabled={true}
    isSelected={false}
    key="3"
    name="1-lucid-RadioGroup-1"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <Label>
      Aquaman
    </Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Robin",
      }
    }
    callbackId={4}
    isDisabled={true}
    isSelected={false}
    key="4"
    name="1-lucid-RadioGroup-1"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <Label>
      Robin
    </Label>
  </RadioButtonLabeled>
</span>
`;

exports[`RadioGroup [common] example testing should match snapshot(s) for nested-select 1`] = `
<span
  className="lucid-RadioGroup"
>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Alvin",
      }
    }
    callbackId={0}
    isDisabled={false}
    isSelected={true}
    key="0"
    name="1-lucid-RadioGroup-1"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <Label>
      Alvin
    </Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": Array [
          "Simon",
          <RadioGroup>
            <RadioButton
              isDisabled={false}
              isSelected={false}
              onSelect={[Function]}
            >
              <Label>
                1
              </Label>
            </RadioButton>
            <RadioButton
              isDisabled={false}
              isSelected={false}
              onSelect={[Function]}
            >
              <Label>
                2
              </Label>
            </RadioButton>
          </RadioGroup>,
        ],
      }
    }
    callbackId={1}
    isDisabled={false}
    isSelected={false}
    key="1"
    name="1-lucid-RadioGroup-1"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <Label>
      Simon
      <RadioGroup>
        <RadioButton
          isDisabled={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <Label>
            1
          </Label>
        </RadioButton>
        <RadioButton
          isDisabled={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <Label>
            2
          </Label>
        </RadioButton>
      </RadioGroup>
    </Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": <SingleSelect>
          <SingleSelect.Option>
            One
          </SingleSelect.Option>
          <SingleSelect.Option>
            Two
          </SingleSelect.Option>
        </SingleSelect>,
      }
    }
    callbackId={2}
    isDisabled={false}
    isSelected={false}
    key="2"
    name="1-lucid-RadioGroup-1"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <Label>
      <SingleSelect>
        <SingleSelect.Option>
          One
        </SingleSelect.Option>
        <SingleSelect.Option>
          Two
        </SingleSelect.Option>
      </SingleSelect>
    </Label>
  </RadioButtonLabeled>
</span>
`;

exports[`RadioGroup [common] example testing should match snapshot(s) for selected-index-as-prop 1`] = `
<span
  className="lucid-RadioGroup"
  style={
    Object {
      "display": "inline-flex",
      "flexDirection": "column",
    }
  }
>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Captain America",
      }
    }
    callbackId={0}
    isDisabled={false}
    isSelected={false}
    key="0"
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <Label>
      Captain America
    </Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Iron Man",
      }
    }
    callbackId={1}
    isDisabled={false}
    isSelected={false}
    key="1"
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <Label>
      Iron Man
    </Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Thor",
      }
    }
    callbackId={2}
    isDisabled={false}
    isSelected={false}
    key="2"
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <Label>
      Thor
    </Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Hulk",
      }
    }
    callbackId={3}
    isDisabled={false}
    isSelected={true}
    key="3"
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <Label>
      Hulk
    </Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Black Widow",
      }
    }
    callbackId={4}
    isDisabled={false}
    isSelected={false}
    key="4"
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <Label>
      Black Widow
    </Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Hawkeye",
      }
    }
    callbackId={5}
    isDisabled={false}
    isSelected={false}
    key="5"
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <Label>
      Hawkeye
    </Label>
  </RadioButtonLabeled>
</span>
`;

exports[`RadioGroup [common] example testing should match snapshot(s) for selected-index-from-child 1`] = `
<span
  className="lucid-RadioGroup"
  style={
    Object {
      "display": "inline-flex",
      "flexDirection": "column",
    }
  }
>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Leonardo",
      }
    }
    callbackId={0}
    isDisabled={false}
    isSelected={false}
    key="0"
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <Label>
      Leonardo
    </Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Raphael",
      }
    }
    callbackId={1}
    isDisabled={false}
    isSelected={false}
    key="1"
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <Label>
      Raphael
    </Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Donatello",
      }
    }
    callbackId={2}
    isDisabled={false}
    isSelected={true}
    key="2"
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <Label>
      Donatello
    </Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Michelangelo",
      }
    }
    callbackId={3}
    isDisabled={false}
    isSelected={false}
    key="3"
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <Label>
      Michelangelo
    </Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Venus",
      }
    }
    callbackId={4}
    isDisabled={false}
    isSelected={false}
    key="4"
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <Label>
      Venus
    </Label>
  </RadioButtonLabeled>
</span>
`;

exports[`RadioGroup [common] example testing should match snapshot(s) for stateful 1`] = `
<span
  className="lucid-RadioGroup"
>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Alvin",
      }
    }
    callbackId={0}
    isDisabled={false}
    isSelected={true}
    key="0"
    name="1-lucid-RadioGroup-1"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <Label>
      Alvin
    </Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Simon",
      }
    }
    callbackId={1}
    isDisabled={false}
    isSelected={false}
    key="1"
    name="1-lucid-RadioGroup-1"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <Label>
      Simon
    </Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Theodore",
      }
    }
    callbackId={2}
    isDisabled={false}
    isSelected={false}
    key="2"
    name="1-lucid-RadioGroup-1"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <Label>
      Theodore
    </Label>
  </RadioButtonLabeled>
</span>
`;
